--- a/frontend/index.html
+++ b/frontend/index.html
@@ -148,32 +148,62 @@
             <span class="close-modal" onclick="closeDbModal()">&times;</span>
             <h2>Connect to Database</h2>
             <form id="db-connect-form" onsubmit="handleDbConnect(event)">
+                <!-- Database Type Selection -->
                 <div class="form-group">
-                    <label>Host</label>
-                    <input type="text" name="host" value="localhost" class="glass-input" required>
+                    <label>Database Type</label>
+                    <select id="db-type" name="db_type" class="glass-input" required onchange="updateDbForm()">
+                        <option value="">Select database type...</option>
+                        <option value="mysql">MySQL (Local/Cloud)</option>
+                        <option value="postgresql">PostgreSQL (Render/Cloud)</option>
+                    </select>
                 </div>
-                <div class="form-row">
+
+                <!-- MySQL Fields -->
+                <div id="mysql-fields" style="display: none;">
                     <div class="form-group">
-                        <label>Port</label>
-                        <input type="number" name="port" value="3306" class="glass-input" required>
+                        <label>Host</label>
+                        <input type="text" id="mysql-host" name="host" value="localhost" class="glass-input">
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Port</label>
+                            <input type="number" id="mysql-port" name="port" value="3306" class="glass-input">
+                        </div>
+                        <div class="form-group">
+                            <label>User</label>
+                            <input type="text" id="mysql-user" name="user" value="root" class="glass-input">
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label>User</label>
-                        <input type="text" name="user" value="root" class="glass-input" required>
+                        <label>Password</label>
+                        <input type="password" id="mysql-password" name="password" class="glass-input">
+                    </div>
+                    <div class="form-group">
+                        <label>Database Name</label>
+                        <input type="text" id="mysql-database" name="database" class="glass-input">
+                    </div>
+                    <div class="form-group">
+                        <label>Table Name</label>
+                        <input type="text" id="mysql-table" name="table" class="glass-input">
                     </div>
                 </div>
-                <div class="form-group">
-                    <label>Password</label>
-                    <input type="password" name="password" class="glass-input" required>
+
+                <!-- PostgreSQL Fields -->
+                <div id="postgres-fields" style="display: none;">
+                    <div class="form-group">
+                        <label>Connection URL</label>
+                        <input type="text" id="postgres-url" name="postgres_url" class="glass-input"
+                            placeholder="postgresql://user:pass@host/database">
+                        <small style="color: var(--text-muted); display: block; margin-top: 5px;">
+                            Get this from your Render PostgreSQL dashboard (External URL)
+                        </small>
+                    </div>
+                    <div class="form-group">
+                        <label>Table Name</label>
+                        <input type="text" id="postgres-table" name="table" class="glass-input">
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label>Database Name</label>
-                    <input type="text" name="database" class="glass-input" required>
-                </div>
-                <div class="form-group">
-                    <label>Table Name</label>
-                    <input type="text" name="table" class="glass-input" required>
-                </div>
+
                 <button type="submit" class="btn-primary full-width">Connect</button>
             </form>
         </div>
